--- a/views/mydata.pug
+++ b/views/mydata.pug
@@ -1,5 +1,6 @@
 extends layout
 
 block content
-  h1= 'My fact page'
-  p Welcome to #{My fact page}
+  h1 My fact page
+  p Welcome to My fact page
+  p I love adventures but will not dare to do them.
