--- a/views/mydata.pug
+++ b/views/mydata.pug
@@ -3,4 +3,4 @@ extends layout
 block content
   h1 My fact page
   p Welcome to My fact page
-  p I love adventures but will not dare to do them.
+  p One of my fun fact is, I love adventures but will not dare to do them.
